# yFinance-api

./: .gitattributes  .gitignore  LICENSE  README.md  api_server.py  config.json.example  core_services.py  installation-and-setup-production.md  pyproject.toml  requirements.txt  yfinance_service.py
.github/workflows/: python-ci.yml
src/yfinance_api/: api_server.py  core_services.py  yfinance_service.py
tests/: test2.py  test_basic.py
